college recs with SAT/ACT data

--- a/notebooks/TestScoresCollege.ipynb
+++ b/notebooks/TestScoresCollege.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "c73fcd9c-1c3a-4dcb-97b5-9b8cc46cc91c",
    "metadata": {
     "trusted": true
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "4b92f5d5-f27e-445e-8dae-ed9ec40d1ff7",
    "metadata": {
     "trusted": true
@@ -46,8 +46,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13ff4364",
+   "metadata": {},
+   "source": [
+    "Based on the columns in `MERGED2010_11_PP.csv` and `MERGED2016_17_PP.csv`, the columns related to SAT/ACT scores for each institution are represented by the following columns + definitions:\n",
+    "\n",
+    " - `SATVR25` - 25th percentile of SAT scores at the institution (critical reading)\n",
+    " - `SATVR75` - 75th percentile of SAT scores at the institution (critical reading)\n",
+    " - `SATMT25` - 25th percentile of SAT scores at the institution (math)\n",
+    " - `SATMT75` - 75th percentile of SAT scores at the institution (math)\n",
+    " - `SATWR25` - 25th percentile of SAT scores at the institution (writing)\n",
+    " - `SATWR75` - 75th percentile of SAT scores at the institution (writing)\n",
+    " - `SATVRMID` - Midpoint of SAT scores at the institution (critical reading)\n",
+    " - `SATMTMID` - Midpoint of SAT scores at the institution (math)\n",
+    " - `SATWRMID` - Midpoint of SAT scores at the institution (writing)\n",
+    " - `ACTCM25` - 25th percentile of the ACT cumulative score\n",
+    " - `ACTCM75` - 75th percentile of the ACT cumulative score\n",
+    " - `ACTEN25` - 25th percentile of the ACT English score\n",
+    " - `ACTEN75` - 75th percentile of the ACT English score\n",
+    " - `ACTMT25` - 25th percentile of the ACT math score\n",
+    " - `ACTMT75` - 75th percentile of the ACT math score\n",
+    " - `ACTWR25` - 25th percentile of the ACT writing score\n",
+    " - `ACTWR75` - 75th percentile of the ACT writing score\n",
+    " - `ACTCMMID` - Midpoint of the ACT cumulative score\n",
+    " - `ACTENMID` - Midpoint of the ACT English score\n",
+    " - `ACTMTMID` - Midpoint of the ACT math score\n",
+    " - `ACTWRMID` - Midpoint of the ACT writing score\n",
+    " - `SAT_AVG` - Average SAT equivalent score of students admitted\n",
+    " - `SAT_AVG_ALL` - Average SAT equivalent score of students admitted for all campuses rolled up to the 6-digit OPE ID\n",
+    "\n",
+    "\n",
+    "Given that the ACt has subsections for Science as well while all of the SAT subsections are accounted for in the above variables, and writing section is optional for the ACT, we determined that it would be best to keep only the 25th, 50th, and 75th percentiles for the SAT reading + math sections and the ACT cumulative values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "a38c6c8b-d100-44cb-8418-61f4a77881fb",
    "metadata": {
     "trusted": true
@@ -63,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "f087a123-cecf-4c8f-a50f-f63d879c3fde",
    "metadata": {
     "trusted": true
@@ -75,7 +110,7 @@
        "(7470, 11)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "63af32f2-c085-46cb-b371-100c5aed0582",
    "metadata": {
     "trusted": true
@@ -98,7 +133,7 @@
        "(7238, 11)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,13 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "b3eb19db-b57a-4d10-ae66-5e36a91f27e9",
    "metadata": {
     "trusted": true
    },
    "outputs": [],
    "source": [
+    "# Dropping all rows where all relevant SAT/ACT test values are NA\n",
     "scores_2012 = scores_2012.dropna(subset=['SATVR25','SATVR75','SATMT25','SATMT75',\n",
     "                 'SATVRMID','SATMTMID',\n",
     "                 'ACTCM25','ACTCM75','ACTCMMID'], how='all')\n",
@@ -126,20 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "9aaed105-0187-4468-8c73-c0f592b5053c",
    "metadata": {
     "trusted": true
    },
    "outputs": [],
    "source": [
+    "# Merging previously created college_2002 and college_2009 datasets with the respective score data for that year's\n",
+    "# college application cycle\n",
     "college_els2002 = pd.merge(college_2002, scores_2012, on='UNITID')\n",
     "college_hsls2009 = pd.merge(college_2009, scores_2016, on='UNITID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "c3903da3-db88-4345-a8fc-8a9bd33492a8",
    "metadata": {
     "trusted": true
@@ -151,7 +189,7 @@
        "(1435, 21)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "6c709e41-dee2-4264-a768-6de6cacd2139",
    "metadata": {
     "trusted": true
@@ -174,7 +212,7 @@
        "(1315, 21)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,13 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "7f7c0029-59c0-4fa8-ab9f-00abe091fc1a",
    "metadata": {
     "trusted": true
    },
    "outputs": [],
    "source": [
+    "# Renaming els2002 colleges with most up-to-date name for the institution based on the university's id\n",
     "college_els2002 = college_els2002.merge(most_recent_college[['UNITID', 'INSTNM']], on='UNITID', how='left')\n",
     "college_els2002['INSTNM_x'] = college_els2002['INSTNM']\n",
     "college_els2002 = college_els2002.dropna(subset=['INSTNM_x']).drop(['INSTNM_y', 'INSTNM'], axis=1)\n",
@@ -200,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "84a2b732",
    "metadata": {},
    "outputs": [
@@ -562,7 +601,7 @@
        "[1358 rows x 20 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,11 +612,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "d7aab629",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renaming hsls2009 colleges with most up-to-date name for the institution based on the university's id\n",
     "college_hsls2009 = college_hsls2009.merge(most_recent_college[['UNITID', 'INSTNM']], on='UNITID', how='left')\n",
     "college_hsls2009['INSTNM_x'] = college_hsls2009['INSTNM']\n",
     "college_hsls2009 = college_hsls2009.dropna(subset=['INSTNM_x']).drop(['INSTNM_y', 'INSTNM'], axis=1)\n",
@@ -586,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "8be68823",
    "metadata": {},
    "outputs": [
@@ -948,7 +988,7 @@
        "[1268 rows x 20 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "9f5ee663-1854-4d94-b247-f5eb79e214a9",
    "metadata": {
     "trusted": true
