added city and importance features

--- a/notebooks/CollegeRec_SyntheticData.ipynb
+++ b/notebooks/CollegeRec_SyntheticData.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4     102234          Spring Hill College           1095           25.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -162,80 +162,105 @@
        "      <th>state</th>\n",
        "      <th>major</th>\n",
        "      <th>college_name</th>\n",
+       "      <th>importance_close_to_home</th>\n",
+       "      <th>importance_school_reputation</th>\n",
+       "      <th>importance_school_cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1383</td>\n",
-       "      <td>2.84</td>\n",
-       "      <td>Sparkschester</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>University of Illinois Urbana-Champaign</td>\n",
+       "      <td>1230</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>Traciehaven</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>Psychology</td>\n",
+       "      <td>New Mexico Institute of Mining and Technology</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1430</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>West Davidmouth</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Carleton College</td>\n",
+       "      <td>1220</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>Nicoleshire</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>Biology</td>\n",
+       "      <td>University of Maryland-Baltimore County</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>2.87</td>\n",
-       "      <td>Watkinsland</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Butler University</td>\n",
+       "      <td>1315</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>Gibsonmouth</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>Art</td>\n",
+       "      <td>United States Air Force Academy</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>Colemanstad</td>\n",
-       "      <td>NE</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>Albion College</td>\n",
+       "      <td>1371</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>New Lindafurt</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>Biology</td>\n",
+       "      <td>Colby College</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1375</td>\n",
-       "      <td>3.41</td>\n",
-       "      <td>South Sandra</td>\n",
-       "      <td>VT</td>\n",
-       "      <td>Psychology</td>\n",
-       "      <td>Macalester College</td>\n",
+       "      <td>1135</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>North Zachary</td>\n",
+       "      <td>MH</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>University of Nebraska-Lincoln</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   student_id   SAT   GPA             city state             major  \\\n",
-       "0           1  1383  2.84    Sparkschester    PA       Engineering   \n",
-       "1           2  1430  3.08  West Davidmouth    VI  Computer Science   \n",
-       "2           3  1164  2.87      Watkinsland    WY  Computer Science   \n",
-       "3           4  1045  3.07      Colemanstad    NE       Engineering   \n",
-       "4           5  1375  3.41     South Sandra    VT        Psychology   \n",
+       "   student_id   SAT   GPA           city state             major  \\\n",
+       "0           1  1230  2.70    Traciehaven    NJ        Psychology   \n",
+       "1           2  1220  3.88    Nicoleshire    WA           Biology   \n",
+       "2           3  1315  3.51    Gibsonmouth    SD               Art   \n",
+       "3           4  1371  3.24  New Lindafurt    KS           Biology   \n",
+       "4           5  1135  3.34  North Zachary    MH  Computer Science   \n",
        "\n",
-       "                              college_name  \n",
-       "0  University of Illinois Urbana-Champaign  \n",
-       "1                         Carleton College  \n",
-       "2                        Butler University  \n",
-       "3                           Albion College  \n",
-       "4                       Macalester College  "
+       "                                    college_name  importance_close_to_home  \\\n",
+       "0  New Mexico Institute of Mining and Technology                         3   \n",
+       "1        University of Maryland-Baltimore County                         3   \n",
+       "2                United States Air Force Academy                         4   \n",
+       "3                                  Colby College                         5   \n",
+       "4                 University of Nebraska-Lincoln                         4   \n",
+       "\n",
+       "   importance_school_reputation  importance_school_cost  \n",
+       "0                             1                       4  \n",
+       "1                             2                       2  \n",
+       "2                             2                       4  \n",
+       "3                             4                       1  \n",
+       "4                             3                       3  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +269,7 @@
     "faker = Faker()\n",
     "\n",
     "# Parameters\n",
-    "num_students = 10000\n",
+    "num_students = 20000\n",
     "majors = [\"Computer Science\", \"Biology\", \"Engineering\", \"Business\", \"Psychology\", \"Nursing\", \"Art\", \"Economics\"]\n",
     "\n",
     "# Generate list of synthetic colleges\n",
@@ -267,7 +292,11 @@
     "        \"city\": city,\n",
     "        \"state\": state,\n",
     "        \"major\": major,\n",
-    "        \"college_name\": college\n",
+    "        \"college_name\": college,\n",
+    "        # Add new importance rating fields (1-5 scale)\n",
+    "        \"importance_close_to_home\": random.randint(1, 5),\n",
+    "        \"importance_school_reputation\": random.randint(1, 5),\n",
+    "        \"importance_school_cost\": random.randint(1, 5)\n",
     "    })\n",
     "\n",
     "df_students = pd.DataFrame(students)\n",
@@ -283,20 +312,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example student data\n",
-    "# This is important!\n",
-    "feature_cols = [\"SAT\", \"GPA\"] + [col for col in df_encoded.columns if col.startswith(\"major_\")]\n",
+    "# Encode all categorical features\n",
+    "df_encoded = pd.get_dummies(df_students, columns=[\n",
+    "    \"major\",\n",
+    "    \"importance_close_to_home\",\n",
+    "    \"importance_school_reputation\",\n",
+    "    \"importance_school_cost\"\n",
+    "])\n",
     "\n",
-    "# Encode categorical features like major\n",
-    "df_encoded = pd.get_dummies(df_students, columns=[\"major\"])\n",
+    "# Define feature columns to include all encoded columns\n",
+    "feature_cols = [\"SAT\", \"GPA\"] + \\\n",
+    "               [col for col in df_encoded.columns if col.startswith(\"major_\")] + \\\n",
+    "               [col for col in df_encoded.columns if col.startswith(\"importance_\")]\n",
     "\n",
     "# Standardize numeric features\n",
     "scaler = StandardScaler()\n",
-    "X = scaler.fit_transform(df_encoded[feature_cols])\n"
+    "X = scaler.fit_transform(df_encoded[feature_cols])"
    ]
   },
   {
@@ -308,11 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_similar_students(target_student, df_encoded, scaler, feature_cols, n_neighbors=25):\n",
+    "    \"\"\"Find similar students based on academic and preference features.\n",
+    "\n",
+    "    Args:\n",
+    "        target_student (dict): Dictionary containing student information with fields matching df_encoded\n",
+    "        df_encoded (pandas.DataFrame): DataFrame containing encoded student features\n",
+    "        scaler (sklearn.preprocessing.StandardScaler): Fitted scaler for numeric features\n",
+    "        feature_cols (list): List of feature column names to use for similarity matching\n",
+    "        n_neighbors (int, optional): Number of similar students to return. Defaults to 25.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: DataFrame containing information about the n_neighbors most similar students\n",
+    "    \"\"\"\n",
     "    # 1. Convert the target student to a DataFrame\n",
     "    student_df = pd.DataFrame([target_student])\n",
     "    student_df = pd.get_dummies(student_df)\n",
@@ -337,19 +384,67 @@
     "    return similar_students\n",
     "\n",
     "def get_college_stats(similar_students):\n",
+    "    \"\"\"Calculate aggregate statistics for colleges attended by similar students.\n",
+    "\n",
+    "    Args:\n",
+    "        similar_students (pandas.DataFrame): DataFrame containing information about similar students,\n",
+    "            including their SAT scores and college choices\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: DataFrame with college-level statistics including:\n",
+    "            - college_name: Name of the college\n",
+    "            - college_avg_SAT: Mean SAT score of similar students at that college\n",
+    "            - num_similar_students: Count of similar students attending that college\n",
+    "            - avg_importance_close_to_home: Mean importance of location for students at that college\n",
+    "            - avg_importance_school_reputation: Mean importance of reputation for students at that college\n",
+    "            - avg_importance_school_cost: Mean importance of cost for students at that college\n",
+    "    \"\"\"\n",
     "    return similar_students.groupby(\"college_name\").agg({\n",
     "        \"SAT\": \"mean\",\n",
-    "        \"student_id\": \"count\"\n",
-    "    }).rename(columns={\"SAT\": \"college_avg_SAT\", \"student_id\": \"num_similar_students\"}).reset_index()\n",
+    "        \"student_id\": \"count\",\n",
+    "        \"importance_close_to_home\": \"mean\",\n",
+    "        \"importance_school_reputation\": \"mean\", \n",
+    "        \"importance_school_cost\": \"mean\"\n",
+    "    }).rename(columns={\n",
+    "        \"SAT\": \"college_avg_SAT\",\n",
+    "        \"student_id\": \"num_similar_students\",\n",
+    "        \"importance_close_to_home\": \"avg_importance_close_to_home\",\n",
+    "        \"importance_school_reputation\": \"avg_importance_school_reputation\",\n",
+    "        \"importance_school_cost\": \"avg_importance_school_cost\"\n",
+    "    }).reset_index()\n",
     "    \n",
     "def classify_colleges(college_df, target_sat, top_n=3):\n",
+    "    \"\"\"Classify colleges into Foundation, Thrive, and Aspire categories based on SAT scores.\n",
+    "\n",
+    "    Args:\n",
+    "        college_df (pandas.DataFrame): DataFrame containing college statistics including:\n",
+    "            - college_name: Name of the college\n",
+    "            - college_avg_SAT: Mean SAT score of similar students at that college\n",
+    "            - num_similar_students: Count of similar students attending that college\n",
+    "            - avg_importance_close_to_home: Mean importance of location for students at that college\n",
+    "            - avg_importance_school_reputation: Mean importance of reputation for students at that college\n",
+    "            - avg_importance_school_cost: Mean importance of cost for students at that college\n",
+    "        target_sat (int): The target student's SAT score\n",
+    "        top_n (int, optional): Number of colleges to return per category. Defaults to 3.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary containing DataFrames for each category (Foundation, Thrive, Aspire)\n",
+    "            with the top_n colleges sorted by number of similar students. Each DataFrame includes:\n",
+    "            - college_name: Name of the college\n",
+    "            - college_avg_SAT: Mean SAT score of similar students\n",
+    "            - num_similar_students: Number of similar students at the college\n",
+    "            - avg_importance_close_to_home: Mean importance of location\n",
+    "            - avg_importance_school_reputation: Mean importance of reputation\n",
+    "            - avg_importance_school_cost: Mean importance of cost\n",
+    "            - category: Classification category (Foundation/Thrive/Aspire)\n",
+    "    \"\"\"\n",
     "    def classify(row):\n",
     "        delta = row[\"college_avg_SAT\"] - target_sat\n",
-    "        if delta <= -20:\n",
+    "        if -40 <= delta <= -20:\n",
     "            return \"Foundation\"\n",
     "        elif -10 <= delta <= 10:\n",
     "            return \"Thrive\"\n",
-    "        elif delta >= 20:\n",
+    "        elif 20 <= delta <= 40:\n",
     "            return \"Aspire\"\n",
     "        else:\n",
     "            return \"Neutral\"\n",
@@ -361,37 +456,47 @@
     "        subset = college_df[college_df[\"category\"] == category] \\\n",
     "                    .sort_values(by=\"num_similar_students\", ascending=False) \\\n",
     "                    .head(top_n)\n",
-    "        results[category] = subset[[\"college_name\", \"college_avg_SAT\", \"num_similar_students\", \"category\"]]\n",
+    "        results[category] = subset[[\"college_name\", \"college_avg_SAT\", \"num_similar_students\", \n",
+    "                                  \"avg_importance_close_to_home\", \"avg_importance_school_reputation\",\n",
+    "                                  \"avg_importance_school_cost\", \"category\"]]\n",
     "\n",
     "    return results\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Functions with Mock Target Student"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'SAT': 1400, 'GPA': 3.6, 'major': 'Business', 'city': 'Seattle', 'state': 'WA', 'importance_close_to_home': 5, 'importance_school_reputation': 2, 'importance_school_cost': 4}\n",
       "\n",
       "📘 Foundation Colleges:\n",
-      "  college_name  college_avg_SAT  num_similar_students   category\n",
-      "Boston College           1360.0                     2 Foundation\n",
-      "  Reed College           1380.0                     2 Foundation\n",
-      " Colby College           1371.0                     1 Foundation\n",
+      "      college_name  college_avg_SAT  num_similar_students  avg_importance_close_to_home  avg_importance_school_reputation  avg_importance_school_cost   category\n",
+      "   Barnard College           1370.0                     3                           2.0                          3.666667                    1.666667 Foundation\n",
+      "      Reed College           1380.0                     3                           2.0                          2.333333                    4.666667 Foundation\n",
+      "Colgate University           1375.0                     2                           4.0                          4.000000                    3.000000 Foundation\n",
       "\n",
       "📘 Thrive Colleges:\n",
-      "                               college_name  college_avg_SAT  num_similar_students category\n",
-      "                           Emory University           1395.0                     3   Thrive\n",
-      "Georgia Institute of Technology-Main Campus           1410.0                     3   Thrive\n",
-      "          University of California-Berkeley           1405.0                     3   Thrive\n",
+      "                     college_name  college_avg_SAT  num_similar_students  avg_importance_close_to_home  avg_importance_school_reputation  avg_importance_school_cost category\n",
+      "                 Emory University           1395.0                     3                           4.0                          3.666667                    3.666667   Thrive\n",
+      "University of California-Berkeley           1405.0                     2                           2.0                          3.000000                    1.500000   Thrive\n",
       "\n",
       "📘 Aspire Colleges:\n",
-      "         college_name  college_avg_SAT  num_similar_students category\n",
-      "Georgetown University           1420.0                     1   Aspire\n",
-      "     Grinnell College           1425.0                     1   Aspire\n"
+      "         college_name  college_avg_SAT  num_similar_students  avg_importance_close_to_home  avg_importance_school_reputation  avg_importance_school_cost category\n",
+      "     Carleton College           1430.0                     2                           4.0                               4.0                         1.5   Aspire\n",
+      "Georgetown University           1420.0                     2                           3.5                               3.5                         1.0   Aspire\n",
+      "     Grinnell College           1425.0                     2                           3.5                               4.0                         3.5   Aspire\n"
      ]
     }
    ],
@@ -399,8 +504,15 @@
     "target_student = {\n",
     "    \"SAT\": 1400,\n",
     "    \"GPA\": 3.6,\n",
-    "    \"major\": \"Nursing\"\n",
+    "    \"major\": majors[3],\n",
+    "    \"city\": \"Seattle\",\n",
+    "    \"state\": \"WA\",\n",
+    "    \"importance_close_to_home\": 5,\n",
+    "    \"importance_school_reputation\": 2,\n",
+    "    \"importance_school_cost\": 4\n",
     "}\n",
+    "\n",
+    "print(target_student)\n",
     "\n",
     "similar_students = find_similar_students(target_student, df_encoded, scaler, feature_cols)\n",
     "college_df = get_college_stats(similar_students)\n",
