added code needed to generate synthetic data and recommendations

--- a/notebooks/CollegeRec_SyntheticData.ipynb
+++ b/notebooks/CollegeRec_SyntheticData.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4     102234          Spring Hill College           1095           25.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,145 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>student_id</th>\n",
-       "      <th>SAT</th>\n",
-       "      <th>GPA</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>major</th>\n",
-       "      <th>college_name</th>\n",
-       "      <th>importance_close_to_home</th>\n",
-       "      <th>importance_school_reputation</th>\n",
-       "      <th>importance_school_cost</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>2.70</td>\n",
-       "      <td>Traciehaven</td>\n",
-       "      <td>NJ</td>\n",
-       "      <td>Psychology</td>\n",
-       "      <td>New Mexico Institute of Mining and Technology</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1220</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>Nicoleshire</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>Biology</td>\n",
-       "      <td>University of Maryland-Baltimore County</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1315</td>\n",
-       "      <td>3.51</td>\n",
-       "      <td>Gibsonmouth</td>\n",
-       "      <td>SD</td>\n",
-       "      <td>Art</td>\n",
-       "      <td>United States Air Force Academy</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1371</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>New Lindafurt</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>Biology</td>\n",
-       "      <td>Colby College</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1135</td>\n",
-       "      <td>3.34</td>\n",
-       "      <td>North Zachary</td>\n",
-       "      <td>MH</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>University of Nebraska-Lincoln</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   student_id   SAT   GPA           city state             major  \\\n",
-       "0           1  1230  2.70    Traciehaven    NJ        Psychology   \n",
-       "1           2  1220  3.88    Nicoleshire    WA           Biology   \n",
-       "2           3  1315  3.51    Gibsonmouth    SD               Art   \n",
-       "3           4  1371  3.24  New Lindafurt    KS           Biology   \n",
-       "4           5  1135  3.34  North Zachary    MH  Computer Science   \n",
-       "\n",
-       "                                    college_name  importance_close_to_home  \\\n",
-       "0  New Mexico Institute of Mining and Technology                         3   \n",
-       "1        University of Maryland-Baltimore County                         3   \n",
-       "2                United States Air Force Academy                         4   \n",
-       "3                                  Colby College                         5   \n",
-       "4                 University of Nebraska-Lincoln                         4   \n",
-       "\n",
-       "   importance_school_reputation  importance_school_cost  \n",
-       "0                             1                       4  \n",
-       "1                             2                       2  \n",
-       "2                             2                       4  \n",
-       "3                             4                       1  \n",
-       "4                             3                       3  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "faker = Faker()\n",
     "\n",
     "# Parameters\n",
-    "num_students = 20000\n",
+    "num_students = 30000\n",
     "majors = [\"Computer Science\", \"Biology\", \"Engineering\", \"Business\", \"Psychology\", \"Nursing\", \"Art\", \"Economics\"]\n",
     "\n",
     "# Generate list of synthetic colleges\n",
@@ -300,7 +169,11 @@
     "    })\n",
     "\n",
     "df_students = pd.DataFrame(students)\n",
-    "df_students.head()"
+    "df_students.head()\n",
+    "\n",
+    "student_school_filepath = '../data/working_data/collegerecs_synthetic/student_college_history.csv'\n",
+    "\n",
+    "df_students.to_csv(student_school_filepath, index=False)\n"
    ]
   },
   {
